Fixes #254 - Search does not work on safari mobile.

--- a/IsrealHiking.Web/controllers/search.css
+++ b/IsrealHiking.Web/controllers/search.css
@@ -39,6 +39,7 @@
     border-left: 1px solid #ccc;
     float: right;
     background-color: white;
+    border-radius: 0;
 }
 
 .search-input-directional {
